tests/unit-fail-compilation/j066c.ref
j066c.c:2:1: error: Declaration for the function f appears with type qualifiers.
  Undefined behavior (UB-TDG1). See C11 sec. 6.7.3:9, J.2:1 item 66
Translation failed (config dumped). Run kcc -d j066c.c to see commands run.
