tests/unit-fail-compilation/j066c.c
typedef int fun();
volatile fun f;

int main(void) {
      return 0;
}
